<resources>
    <string name="app_name">IMDb-Scraping</string>
    <string name="font_light">fonts/ubuntu_light.ttf</string>
    <string name="font_regular">fonts/ubuntu_regular.ttf</string>
    <string name="font_medium">fonts/ubuntu_medium.ttf</string>
    <string name="font_bold">fonts/ubuntu_bold.ttf</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="charts">Charts</string>
    <string name="trailers">Trailers</string>
    <string name="imdbs">IMDbS</string>
    <string name="network_connection_error">Network Connection Error</string>
    <string name="network_connection_error_suggest">Please check your network connection and try again.</string>
    <string name="unexpected_error">Oops!</string>
    <string name="unexpected_error_suggest">Something went wrong!</string>
    <string name="try_again">Try Again</string>
    <string name="featured_today">Featured Today</string>
    <string name="imdb_originals">IMDb Originals</string>
    <string name="imdb_originals_subtitle">Celebrity interviews, trending entertainment stories, and expert analysis</string>
    <string name="editor_picks">Editor\'s picks</string>
    <string name="trailer">Trailer</string>
    <string name="fan_favorites">Fan favorites</string>
    <string name="fan_favorites_subtitle">This week\'s top TV and movies</string>
    <string name="explore_whats_streaming">Explore what’s streaming</string>
    <string name="in_theaters">In theaters</string>
    <string name="top_box_office">Top box office</string>
    <string name="top_box_office_subtitle">Weekend of %s</string>
    <string name="coming_soon_to_theaters">Coming soon to theaters</string>
    <string name="coming_soon_to_theaters_subtitle">Trailers for upcoming releases</string>
    <string name="born_today">Born today</string>
    <string name="born_today_subtitle">People born on %s</string>
    <string name="top_news">Top news</string>
    <string name="genres">Genres</string>
    <string name="celebs">Celebs</string>
    <string name="titles">Titles</string>
    <string name="titles_with_colon">Titles:</string>
    <string name="keywords">Keywords</string>
    <string name="events">Events</string>
    <string name="director_with_colon">Director:</string>
    <string name="stars_with_colon">Stars:</string>
    <string name="votes_with_colon">Votes:</string>
    <string name="calender">Calender</string>
    <string name="calender_subtitle">Upcoming Releases for United States</string>
    <string name="all">All</string>
    <string name="name">Name</string>
    <string name="e_g_emma_watson">e.g. Emma Watson</string>
    <string name="birth_date">Birth Date</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="to">to</string>
    <string name="birthday">Birthday</string>
    <string name="mm_dd">MM-DD</string>
    <string name="name_groups">Name Groups</string>
    <string name="best_actress_nominated">Best Actress-Nominated</string>
    <string name="best_actor_nominated">Best Actor-Nominated</string>
    <string name="oscar_nominated">Oscar-Nominated</string>
    <string name="oscar_winning">Oscar-Winning</string>
    <string name="best_director_winning">Best Director-Winning</string>
    <string name="best_director_nominated">Best Director-Nominated</string>
    <string name="best_supporting_actor_winning">Best Supporting Actor-Winning</string>
    <string name="best_supporting_actress_winning">Best Supporting Actress-Winning</string>
    <string name="best_supporting_actress_nominated">Best Supporting Actress-Nominated</string>
    <string name="best_supporting_actor_nominated">Best Supporting Actor-Nominated</string>
    <string name="best_actor_winning">Best Actor-Winning</string>
    <string name="best_actress_winning">Best Actress-Winning</string>
    <string name="star_sign">Star Sign</string>
    <string name="capricorn">Capricorn</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="scorpio">Scorpio</string>
    <string name="libra">Libra</string>
    <string name="virgo">Virgo</string>
    <string name="leo">Leo</string>
    <string name="cancer">Cancer</string>
    <string name="gemini">Gemini</string>
    <string name="taurus">Taurus</string>
    <string name="aries">Aries</string>
    <string name="pisces">Pisces</string>
    <string name="aquarius">Aquarius</string>
    <string name="e_g_iran">e.g. Iran</string>
    <string name="death_date">Death Date</string>
    <string name="birth_place">Birth Place</string>
    <string name="death_place">Death Place</string>
    <string name="gender">Gender</string>
    <string name="females">Females</string>
    <string name="males">Males</string>
    <string name="biographies">Biographies</string>
    <string name="search_for_words_that_might_appear_in_the_mini_biography">Search for words that might appear in the Mini-Biography</string>
    <string name="sort">Sort</string>
    <string name="death_date_descending">Death Date Descending</string>
    <string name="death_date_ascending">Death Date Ascending</string>
    <string name="birth_date_descending">Birth Date Descending</string>
    <string name="birth_date_ascending">Birth Date Ascending</string>
    <string name="a_z_descending">A-Z Descending</string>
    <string name="a_z_ascending">A-Z Ascending</string>
    <string name="starmeter_descending">STARmeter Descending</string>
    <string name="starmeter_ascending">STARmeter Ascending</string>
    <string name="title">Title</string>
    <string name="e_g_the_godfather">e.g. The Godfather</string>
    <string name="title_type">Title Type</string>
    <string name="release_date">Release Date</string>
    <string name="user_rating">User Rating</string>
    <string name="_1_10">1-10</string>
    <string name="number_of_votes">Number of Votes</string>
    <string name="feature_film">Feature Film</string>
    <string name="tv_movie">TV Movie</string>
    <string name="tv_series">TV Series</string>
    <string name="tv_episode">TV Episode</string>
    <string name="tv_special">TV Special</string>
    <string name="mini_series">Mini-Series</string>
    <string name="documentary">Documentary</string>
    <string name="video_game">Video Game</string>
    <string name="short_film">Short Film</string>
    <string name="video">Video</string>
    <string name="tv_short">TV Short</string>
    <string name="podcast_series">Podcast Series</string>
    <string name="podcast_episode">Podcast Episode</string>
    <string name="music_video">Music Video</string>
    <string name="western">Western</string>
    <string name="war">War</string>
    <string name="thriller">Thriller</string>
    <string name="talk_show">Talk-Show</string>
    <string name="sport">Sport</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="romance">Romance</string>
    <string name="reality_tv">Reality-TV</string>
    <string name="news">News</string>
    <string name="mystery">Mystery</string>
    <string name="musical">Musical</string>
    <string name="music">Music</string>
    <string name="horror">Horror</string>
    <string name="history">History</string>
    <string name="game_show">Game-Show</string>
    <string name="film_noir">Film-Noir</string>
    <string name="fantasy">Fantasy</string>
    <string name="family">Family</string>
    <string name="drama">Drama</string>
    <string name="crime">Crime</string>
    <string name="comedy">Comedy</string>
    <string name="biography">Biography</string>
    <string name="animation">Animation</string>
    <string name="adventure">Adventure</string>
    <string name="action">Action</string>
    <string name="title_groups">Title Groups</string>
    <string name="imdb_bottom_1000">IMDb Bottom 1000</string>
    <string name="imdb_bottom_250">IMDb Bottom 250</string>
    <string name="imdb_bottom_100">IMDb Bottom 100</string>
    <string name="razzie_nominated">Razzie-Nominated</string>
    <string name="razzie_winning">Razzie-Winning</string>
    <string name="national_film_board_preserved">National Film Board Preserved</string>
    <string name="best_picture_nominated">Best Picture-Nominated</string>
    <string name="now_playing">Now-Playing</string>
    <string name="best_picture_winning">Best Picture-Winning</string>
    <string name="golden_globe_nominated">Golden Globe-Nominated</string>
    <string name="emmy_award_nominated">Emmy Award-Nominated</string>
    <string name="golden_globe_winning">Golden Globe-Winning</string>
    <string name="emmy_award_winning">Emmy Award-Winning</string>
    <string name="imdb_top_1000">IMDb Top 1000</string>
    <string name="imdb_top_250">IMDb Top 250</string>
    <string name="imdb_top_100">IMDb Top 100</string>
    <string name="companies">Companies</string>
    <string name="warner_bros">Warner Bros</string>
    <string name="walt_disney">Walt Disney</string>
    <string name="universal">Universal</string>
    <string name="paramount">Paramount</string>
    <string name="mgm">MGM</string>
    <string name="dreamworks">DreamWorks</string>
    <string name="sony">Sony</string>
    <string name="_20th_century_fox">20th Century Fox</string>
    <string name="us_certificates">US Certificates</string>
    <string name="nc_17">NC-17</string>
    <string name="r">R</string>
    <string name="pg_13">PG-13</string>
    <string name="pg">PG</string>
    <string name="g">G</string>
    <string name="color_info">Color Info</string>
    <string name="color">Color</string>
    <string name="black_white"><![CDATA[Black & white]]></string>
    <string name="colorized">Colorized</string>
    <string name="aces">ACES</string>
    <string name="countries">Countries</string>
    <string name="countries_with_colon">Countries:</string>
    <string name="_2_letter_e_g_ir_us_ca_uk">2-Letter e.g. ir, us, ca, uk</string>
    <string name="languages">Languages</string>
    <string name="languages_with_colon">Languages:</string>
    <string name="language_code_e_g_fa_en">Language code e.g. fa, en</string>
    <string name="keyword">Keyword</string>
    <string name="e_g_superhero">e.g. superhero</string>
    <string name="filming_location">Filming Location</string>
    <string name="plot">Plot</string>
    <string name="search_for_words_that_might_appear_in_the_plot_summary">Search for words that might appear in the plot summary</string>
    <string name="runtime">Runtime</string>
    <string name="min">min</string>
    <string name="date_of_your_rating_old_to_new">Date of your rating (Old to New)</string>
    <string name="date_of_your_rating_new_to_old">Date of your rating (New to Old)</string>
    <string name="your_rating_low_to_high">Your rating (Low to High)</string>
    <string name="your_rating_high_to_low">Your rating (High to Low)</string>
    <string name="release_date_descending">Release Date Descending</string>
    <string name="release_date_ascending">Release Date Ascending</string>
    <string name="year_descending">Year Descending</string>
    <string name="year_ascending">Year Ascending</string>
    <string name="runtime_descending">Runtime Descending</string>
    <string name="runtime_ascending">Runtime Ascending</string>
    <string name="us_box_office_descending">US Box Office Descending</string>
    <string name="us_box_office_ascending">US Box Office Ascending</string>
    <string name="num_votes_descending">Num Votes Descending</string>
    <string name="num_votes_ascending">Num Votes Ascending</string>
    <string name="user_rating_descending">User Rating Descending</string>
    <string name="weekend">Weekend:</string>
    <string name="groos">Groos:</string>
    <string name="weeks">Weeks:</string>
    <string name="winner">WINNER</string>
    <string name="theme">Theme</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="follow_system">Follow System</string>
    <string name="night_auto_battery">Night Auto Battery</string>
</resources>