<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_gray_050"
        >

        <com.mabahmani.imdb_scraping.ui.custom.ActionBarWidget
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:ABW_Title="@string/calender"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appBar"
            android:textColor="@color/gray_900"
            android:text="@string/calender_subtitle"
            android:padding="16dp"
            fontPath="@string/font_bold"
            />

        <com.mabahmani.imdb_scraping.ui.custom.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            />


        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <include
                    layout="@layout/shimmer_calender"
                    />

                <include
                    layout="@layout/shimmer_calender"
                    />

                <include
                    layout="@layout/shimmer_calender"
                    />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>