<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.mabahmani.imdb_scraping.ui.custom.NestedScrollView
            android:id="@+id/nestedParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical"
                    >

                    <include layout="@layout/shimmer_home"/>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.mabahmani.imdb_scraping.ui.custom.RecyclerView
                        android:id="@+id/trailersList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintDimensionRatio="H,1:0.4"
                        android:background="@drawable/bg_gradient_home_trailer_top"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.mabahmani.imdb_scraping.ui.custom.TitleWidget
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:TW_Title="@string/featured_today"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="32dp"
                    />
                <com.mabahmani.imdb_scraping.ui.custom.RecyclerView
                    android:id="@+id/featuredTodayList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="8dp"
                    android:clipToPadding="false"
                    />

                <com.mabahmani.imdb_scraping.ui.custom.TitleWidget
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:TW_Title="@string/imdb_originals"
                    app:TW_Subtitle="@string/imdb_originals_subtitle"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="32dp"
                    />
                <com.mabahmani.imdb_scraping.ui.custom.RecyclerView
                    android:id="@+id/imdbOriginalsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="8dp"
                    android:clipToPadding="false"
                    />

                <com.mabahmani.imdb_scraping.ui.custom.TitleWidget
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:TW_Title="@string/editor_picks"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="32dp"
                    />
                <com.mabahmani.imdb_scraping.ui.custom.RecyclerView
                    android:id="@+id/editorPicksList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="8dp"
                    android:clipToPadding="false"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.mabahmani.imdb_scraping.ui.custom.NestedScrollView>


        <com.mabahmani.imdb_scraping.ui.custom.ActionBarWidget
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:ABW_Title="@string/imdbs"
            app:ABW_ShowBackAction="false"
            app:ABW_ActionIcon="@drawable/ic_bx_cog"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>