<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageParent"
            android:layout_width="75dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:background="@color/gray_200"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay4DpRadius" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/imageParent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                fontPath="@string/font_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/sky_900"
                android:background="@color/gray_300"
                />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    fontPath="@string/font_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekend"
                    android:textColor="@color/gray_600"
                    android:textSize="12sp"
                    />


                <androidx.appcompat.widget.AppCompatTextView
                    fontPath="@string/font_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:textColor="@color/gray_600"
                    android:background="@color/gray_300"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    fontPath="@string/font_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/groos"
                    android:textColor="@color/gray_600"
                    android:textSize="12sp"
                    />


                <androidx.appcompat.widget.AppCompatTextView
                    fontPath="@string/font_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:textColor="@color/gray_600"
                    android:background="@color/gray_300"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    fontPath="@string/font_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weeks"
                    android:textColor="@color/gray_600"
                    android:textSize="12sp"
                    />


                <androidx.appcompat.widget.AppCompatTextView
                    fontPath="@string/font_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:textColor="@color/gray_600"
                    android:background="@color/gray_300"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_100"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>