<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="imageUrl"
            type="String" />

        <variable
            name="isWinner"
            type="Boolean" />

        <variable
            name="note"
            type="String" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="H,1:1.48"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay4DpRadius"
                bind:imageUrl="@{imageUrl}"
                bind:background="@tools:sample/backgrounds/scenic"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@id/image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="@string/winner"
                    android:textColor="@color/gray_900"
                    android:textSize="12sp"
                    android:visibility="@{isWinner ? View.VISIBLE: View.GONE}"
                    bind:rectangleBackgroundColor="@{@color/yellow_500}"
                    bind:rectangleBackgroundRadius="@{8}"
                    fontPath="@string/font_bold"
                    />

                <com.mabahmani.imdb_scraping.ui.custom.RecyclerView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    fontPath="@string/font_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{note}"
                    android:textColor="@color/gray_900"
                    android:textSize="12sp"
                    bind:text="@tools:sample/lorem"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_100"
            android:layout_marginVertical="8dp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>